# dawg-logger

./: CMakeLists.txt  README.md  conanfile.py  config.multi.json
examples/: demo_main.cpp
include/dawg-log/: base_logger.hpp  concepts.hpp  config.hpp  general_logs.hpp  level.hpp  logger.hpp  record.hpp  src_location.hpp  tagged_logger.hpp  utils.hpp
include/dawg-log/formatters/: formatter.hpp  json_formatter.hpp  text_formatter.hpp
include/dawg-log/sinks/: console_sink.hpp  file_sink.hpp  sink.hpp  syslog_sink.hpp
src/: console_sink.cpp  file_sink.cpp  json_formatter.cpp  logger.cpp  syslog_sink.cpp  text_formatter.cpp  utils.cpp
tests/: basic_tests.cpp
